--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,15 @@ a {
   color: #22a7a7f3;
 }
 
+#covering-div {
+  width: 100%;
+  height: 200px;
+  opacity: 0.2;
+  background-color: red;
+  position: relative;
+  bottom: 100px;
+}
+
 .about-pars {
   background-color: #22a7a76b;
   background-color: #22a7a76b;
